clusters/base/podinfo/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: default
  annotations:
    konghq.com/protocol: "http"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /podinfo
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 9898
